--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,12 +14,12 @@ body {
 }
 
 a {
-  color: #1acc8d;
+  color: #ff5677;
   text-decoration: none;
 }
 
 a:hover {
-  color: #34e5a6;
+  color: #ff5677;
   text-decoration: none;
 }
 
@@ -46,8 +46,8 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #1acc8d;
-  border-top-color: #d2f9eb;
+  border: 6px solid #ff5677;
+  border-top-color: #db8a9a;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #1acc8d;
+  background: #ff5677;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -94,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #2be4a2;
+  background: #ff3b62;
   color: #fff;
 }
 .back-to-top.active {
@@ -228,7 +228,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #1acc8d;
+  color: #ff5677;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -340,7 +340,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #1acc8d;
+  color: #ff5677;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -636,7 +636,7 @@ section {
 .about .icon-boxes h3 {
   font-size: 28px;
   font-weight: 700;
-  color: #010483;
+  color: #5e72e4;
   margin-bottom: 15px;
 }
 .about .icon-box {
@@ -675,7 +675,7 @@ section {
   transition: 0.3s;
 }
 .about .icon-box .title a:hover {
-  color: #1acc8d;
+  color: #ff5677;
 }
 .about .icon-box .description {
   margin-left: 85px;
@@ -801,7 +801,7 @@ section {
   font-size: 18px;
 }
 .features .icon-box h3 a {
-  color: #010483;
+  color: black;
   transition: ease-in-out 0.3s;
 }
 .features .icon-box h3 a:hover {
@@ -831,7 +831,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 20px;
-  background: #1acc8d;
+  background: #FF5677;
   padding: 12px;
   color: #fff;
   border-radius: 50px;
@@ -876,7 +876,7 @@ section {
 .details .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #1acc8d;
+  color: #ff5677;
 }
 .details .content p:last-child {
   margin-bottom: 0;
@@ -974,7 +974,7 @@ section {
   background-color: rgba(255, 255, 255, 0.4);
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #1acc8d;
+  background-color: #ff5677;
 }
 @media (min-width: 1024px) {
   .testimonials {
@@ -1050,7 +1050,7 @@ section {
   color: #01036f;
 }
 .team .member .social a:hover {
-  color: #1acc8d;
+  color: #ff5677;
 }
 .team .member .social i {
   font-size: 16px;
@@ -1080,7 +1080,7 @@ section {
 }
 .pricing h4 {
   font-size: 36px;
-  color: #1acc8d;
+  color: #ff5677;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1107,7 +1107,7 @@ section {
   padding-bottom: 16px;
 }
 .pricing ul i {
-  color: #1acc8d;
+  color: #ff5677;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1122,7 +1122,7 @@ section {
   text-align: center;
 }
 .pricing .btn-buy {
-  background: #1acc8d;
+  background: #ff5677;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 50px;
@@ -1139,7 +1139,7 @@ section {
 }
 .pricing .featured h3 {
   color: #fff;
-  background: #1acc8d;
+  background: #ff5677;
 }
 .pricing .advanced {
   width: 200px;
@@ -1150,7 +1150,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #1acc8d;
+  background: #ff5677;
   color: #fff;
 }
 
@@ -1189,7 +1189,7 @@ section {
   position: absolute;
   right: 0;
   left: 20px;
-  color: #34e5a6;
+  color: #ff5677;
 }
 .faq .faq-list .icon-show, .faq .faq-list .icon-close {
   font-size: 24px;
@@ -1205,10 +1205,10 @@ section {
   display: none;
 }
 .faq .faq-list a.collapsed {
-  color: #343a40;
+  color: black;
 }
 .faq .faq-list a.collapsed:hover {
-  color: #1acc8d;
+  color: #ff5677;
 }
 .faq .faq-list a.collapsed .icon-show {
   display: inline-block;
@@ -1231,7 +1231,7 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #3f43fd;
+  color: #5e72e4;
   float: left;
   width: 44px;
   height: 44px;
@@ -1259,7 +1259,7 @@ section {
   margin-top: 40px;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #1acc8d;
+  background: #ff5677;
   color: #fff;
 }
 .contact .php-email-form {
@@ -1318,7 +1318,7 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #1acc8d;
+  background: #ff5677;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1326,7 +1326,7 @@ section {
   border-radius: 50px;
 }
 .contact .php-email-form button[type=submit]:hover {
-  background: #34e5a6;
+  background: #ff5677;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1361,7 +1361,7 @@ section {
   margin-bottom: 15px;
   background: #010246;
   color: #fff;
-  border-top: 4px solid #1acc8d;
+  border-top: 4px solid #ff5677;
   text-align: center;
   padding: 30px 20px;
 }
@@ -1392,7 +1392,7 @@ section {
   transition: 0.3s;
 }
 #footer .footer-top .social-links a:hover {
-  background: #1acc8d;
+  background: #ff5677;
   color: #fff;
   text-decoration: none;
 }
@@ -1455,7 +1455,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #1acc8d;
+  background: #ff5677;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1466,7 +1466,7 @@ section {
 #footer .copyright {
   border-top: 1px solid #010479;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 15px;
 }
 #footer .credits {
   padding-top: 10px;
